src/dv.h


#define DV_ABI_VERSION	2u
uint32_t dv_abi_version (void);
typedef enum dv_status {
  DV_OK = 0,
  DV_QUEUE_FULL,
  DV_QUEUE_DISABLED,
  DV_QUEUE_UNKNOWN,
  DV_QUEUE_EMPTY,
  DV_QUEUE_GONE,
  DV_IDLE,              
  DV_DONE,              
  DV_ERROR,             
  DV_ABI_MISMATCH,
  DV_SNAPSHOT_MISMATCH,
  DV_BUSY,
  DV_BUFFER_TOO_SMALL,
  DV_QUEUE_DROPPED      
} dv_status;
const char *dv_status_name (dv_status s);
typedef struct dv_instance dv_instance;
typedef uint32_t dv_queue_id;   
typedef struct dv_config {
  uint32_t abi_version;   
  uint32_t flags;
  size_t memory_limit;    
  void *reserved;
} dv_config;
#define DV_FLAG_TEXT_ONLY	0x1u
#define DV_FLAG_UNSAFE_DEBUG	0x2u
#define DV_FLAG_UNSAFE_STDLIB	0x4u
dv_instance *dv_new (const dv_config *cfg);
void dv_free (dv_instance *inst);
dv_status dv_load (dv_instance *inst, const uint8_t *code, size_t len,
                   const char *name);
const char *dv_last_error (dv_instance *inst);
typedef struct dv_queue_info {
  uint32_t capacity;
  uint32_t len;
  uint8_t enabled;
  uint8_t exported;
  uint8_t direction;      
  uint8_t on_full;        
} dv_queue_info;
dv_queue_id dv_queue_lookup (dv_instance *inst, const char *name);
dv_status dv_queue_state (dv_instance *inst, dv_queue_id id,
                          dv_queue_info *out);
dv_status dv_queue_push (dv_instance *inst, dv_queue_id id,
                         const uint8_t *msgpack, size_t len);
dv_status dv_queue_pop (dv_instance *inst, dv_queue_id id,
                        uint8_t *buf, size_t cap, size_t *out_len);
dv_status dv_queue_peek (dv_instance *inst, dv_queue_id id,
                         const uint8_t **ptr, size_t *out_len);
void dv_queue_release (dv_instance *inst, dv_queue_id id);
#define DV_WAIT_MAX	32
typedef struct dv_waitset {
  uint32_t n;
  dv_queue_id ids[DV_WAIT_MAX];
  int64_t timeout_ms;     
  uint8_t for_write;      
} dv_waitset;
dv_status dv_run (dv_instance *inst, dv_waitset *out_waitset);
dv_status dv_resume (dv_instance *inst, dv_queue_id fired);
dv_status dv_waitset_get (dv_instance *inst, dv_waitset *out);
void dv_set_endpoint_handler (dv_instance *inst,
                              int (*bind)(void *ud, const uint8_t *ref,
                                          size_t len, uint32_t *token),
                              void *ud);
void dv_endpoint_allow (dv_instance *inst, const uint8_t *ref, size_t len,
                        uint32_t token);
dv_queue_id dv_endpoint_queue (dv_instance *inst, uint32_t token);
dv_status dv_endpoint_close (dv_instance *inst, dv_queue_id id);
#define DV_LAYOUT_CONFIG_SIZE		0
#define DV_LAYOUT_CONFIG_ABI		1
#define DV_LAYOUT_CONFIG_FLAGS		2
#define DV_LAYOUT_QUEUE_INFO_SIZE	3
#define DV_LAYOUT_QUEUE_INFO_CAPACITY	4
#define DV_LAYOUT_QUEUE_INFO_LEN	5
#define DV_LAYOUT_QUEUE_INFO_ENABLED	6
#define DV_LAYOUT_QUEUE_INFO_EXPORTED	7
#define DV_LAYOUT_QUEUE_INFO_DIRECTION	8
#define DV_LAYOUT_QUEUE_INFO_ON_FULL	9
#define DV_LAYOUT_WAITSET_SIZE		10
#define DV_LAYOUT_WAITSET_N		11
#define DV_LAYOUT_WAITSET_IDS		12
#define DV_LAYOUT_WAITSET_TIMEOUT	13
#define DV_LAYOUT_WAITSET_FOR_WRITE	14
#define DV_LAYOUT_COUNT			26
dv_status dv_set_budget (dv_instance *inst, uint64_t instructions,
                         uint64_t memory_kb);
dv_status dv_usage (dv_instance *inst, uint64_t *instructions,
                    uint64_t *memory_kb);
dv_status dv_memory (dv_instance *inst, uint64_t *bytes_now,
                     uint64_t *bytes_peak);
int dv_exceeded (dv_instance *inst);
dv_status dv_snapshot (dv_instance *inst, const char *host,
                       uint8_t *out, size_t cap, size_t *len);
dv_status dv_restore (dv_instance *inst, const char *host,
                      const uint8_t *s, size_t len);
dv_status dv_register_code (dv_instance *inst, const uint8_t *code, size_t len,
                            const char *name);
uint32_t dv_layout (uint32_t *out, size_t n);
void dv_set_notify (dv_instance *inst,
                    void (*cb)(void *ud, dv_queue_id id), void *ud);